--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,14 @@
                 <td><img src="codechef.jpeg" width="100" height="100"></td>
                 <td> <a href="https://www.codechef.com/users/prajwalsakunde" style="color:rgb(202, 183, 159) ;">  <h4>Code chef Id</h4>  </a></td>
             </tr>
+            <tr>
+                <td><img src="info2.img" alt="Review" width="100" height="100"></td>
+                <td> <a href="ask.html" style="color: rgb(37, 2, 70);"> <h4>Website Feedback</h4></a></td>
+            </tr>
         </tr>
     </table>
 
-    <a href="ask.html"> INFO</a>
+   
    
 </center>
 </body>
