--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </tr>
         </table>
     </center>
-    <p><em> first year <strong> computer engineering </strong>student at <strong>KK wagh college </strong></em><br>
+    <p><em> second year <strong> computer engineering </strong>student at <strong>KK wagh college </strong></em><br>
         I am a <em>professional coder</em> and <em>developer</em>, recently i completed one of the most used and important languages in tech,<strong> C/C++ </strong> and <strong>Python</strong>.
         My recent status is pursuing <em> web developement</em> from <em><strong>Angela's </strong></em> Personal Udemy course.<br>
         I love playing cricket , also reached national level cricket in I   ndia <br>
