--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </table>
     </center>
     <p><em> second year <strong> computer engineering </strong>student at <strong>KK wagh college </strong></em><br>
-        I am a <em>professional coder</em> and <em>developer</em>, recently i completed one of the most used and important languages in tech,<strong> C/C++ </strong> and <strong>Python</strong>.
+        I am a <em>professional coder</em> and <em>developer</em>, recently i completed one of the most used languages in tech,<strong> C/C++ </strong> and <strong>Python</strong>.
         My recent status is pursuing <em> web developement</em> from <em><strong>Angela's </strong></em> Personal Udemy course.<br>
-        I love playing cricket , also reached national level cricket in I   ndia <br>
+        I love playing cricket , also reached national level cricket in India <br>
         Also working on 2 different projects one base on <em> game developement</em> and another is <em>web developement </em>,
         intrested in many techincal knowledge although i am improving my soft skills , one day defently 
         going to be a great person and aim to become one of the best <em> Entrepreneur </em>in world.
