--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prajwal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,21 +14,22 @@
         <table cellspacing="20">
             <tr>
                 <td><img src="p1.png" alt="Prajwal profile picture " width="180" height="170"></td>
-                <td><h1 style="color:rgb(15, 85, 106);">✨ Prajwal Sakunde ✨</h1>
+                <td><h1>✨ Prajwal Sakunde ✨</h1>
                     <a href="contact.html" style="color:darkorchid;"><h4>🪪Contact Me</h4></a> </td>
             </tr>
         </table>
     </center>
     <p><em> second year <strong> computer engineering </strong>student at <strong>KK wagh college </strong></em><br>
-        I am a <em>professional coder</em> and <em>developer</em>, recently i completed one of the most used languages in tech,<strong> C/C++ </strong> and <strong>Python</strong>.
+        I am a <em>professional coder</em> and <em>developer</em>, recently i completed one of the most used and important languages in tech,<strong> C/C++ </strong> and <strong>Python</strong>.
         My recent status is pursuing <em> web developement</em> from <em><strong>Angela's </strong></em> Personal Udemy course.<br>
-        I love playing cricket , also reached national level cricket in India <br>
+        I love playing cricket , also reached national level cricket in I   ndia <br>
         Also working on 2 different projects one base on <em> game developement</em> and another is <em>web developement </em>,
         intrested in many techincal knowledge although i am improving my soft skills , one day defently 
         going to be a great person and aim to become one of the best <em> Entrepreneur </em>in world.
     </p>
-    <hr size="3" color="PINK">
+    <hr>
 <!--<pre> </pre> use for using the txt as it is in program  !--> 
+    
     <h3>
         <em>🏅 Education & Achievements 🏅</em></h3>
     <ul>
@@ -39,8 +41,7 @@
         <li>Qualified for <strong> JEE Advanced </strong> </li>
         <li>Certified <strong>Ethical Hacker </strong> with <em>  penetration License </em></li>
     </ul>
-    <hr size="3" color="skyblues">
-
+    <hr>
     <h3> My Hobbies 😎</h3>
     <ol type="I">
         <li>Coding</li>
@@ -50,9 +51,9 @@
         <li>Video Editing</li>
         <li>Long Drives</li>
     </ol>
-    <hr size="3" color="lightgreen"> 
+    <hr> 
     <center> 
-    <h3 style="color:rgb(0, 0, 0) ;">📜Results📜</h3>
+    <h3>📜Results📜</h3>
      <table border="7" style="color:darkblue  ;">
         <thead style="color:rgb(15, 85, 106) ;">
             <tr>
@@ -90,7 +91,7 @@
         </tbody>
     </table>
 </center>
-<hr size="3" color="lightblue">
+<hr>
 <center>
 <h3>💎Skills💎</h3>
 <table>
