--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title  >Contact Details </title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body style="background-color:#f3f0f0 ;">
     <center>
     <table>
         <tr>
