--- a/ask.html
+++ b/ask.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Review&Ratings</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <center>
@@ -18,14 +19,14 @@
         <label>Email ID:</label>
     <input type="email" name="Your Email">
     </td></tr>
-    <tr>
+    <!-- <tr>
         <td>
             <label>🔑Password:</label>
             <input type="password" name="Your password">
-            <!-- <input type="checkbox"> -->
+            <input type="checkbox">
             
         </td>
-    </tr>
+    </tr> -->
     <tr>
         <td>
             <label style="color: rgb(95, 6, 90);">📜Upload Resume:</label>
